--- a/404-page.html
+++ b/404-page.html
@@ -10,8 +10,8 @@
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-      <link rel="stylesheet" href="css/evisa-landing-page-style.css">
-      <title>eVisa Landing Page</title>
+      <link rel="stylesheet" href="css/404-page-style.css">
+      <title>eVisa 404 Page</title>
   </head>
   <body>
      <header>
@@ -40,41 +40,31 @@
               </div>
             </div>
           </nav>
-          <div class="header-title">
-              <h3>Online Visa Service</h3>
-          </div> 
      </header>
     <div class="container">
-      <div class="content">
-        <div class="col-xs-12 col-sm-12 col-md-12">
-          <div class="box">							
-            <div class="icon-text">
-              <p class="text">eVisa</p>
-              <div class="info">
-                <p>
-                  The eVisa Burkina Faso is an elactronic travel authorization issued by the government of Burkina Faso.
-                  eVisa is an entry requirement  <br/>to travel to and within Burkina Faso. The Burkinabe eVisa is for touristic or family purpose. <br/>Visitors who enter Burkina Faso are required to present a valid eVisa at the port of entry.
-                </p>
-              </div>
-            </div>
+        <div class="row col-md-12">
+          <div class="col-md-3">
+
+          </div>
+          <div class="col-md-6 error-image">
+            <p>4</p>
+            <img src="images/website-imgs/Coat_of_arms_of_Burkina_Faso.png" alt="error image for eVisa">
+            <p>4</p>
+          </div>
+          <div class="col-md-3">
+
           </div> 
         </div>
+        <div class="row error-message">
+          <h4>Oops! There is nothing out here.</h4>
+          <p>The page you are looking for cannot be reached or simply does not exist.</p>
+        </div>
         <div class="signup-btns">
-          <button type="submit" class="login">Login</button>
-          <button type="submit" class="register">Register</button>
+            <button type="submit" class="login">Login</button>
+            <button type="submit" class="register">Register</button>
         </div>
-        <div class="progressbar-section">
-          <ul class="progressbar">
-            <li class="active">Application</li>
-            <li>Submit Document</li>
-            <li>Payment</li>
-            <li>Approval</li>
-          </ul>
-        </div>
-      </div>
-    </div>
+    </div>    
     <footer class="footer">
-      <div class="top-footer">  </div>
       <div class="row bottom-footer">
           <div class="col-md-6 footer-menu">
             <ul class="col-md-12 footer-nav">
