--- a/registration.html
+++ b/registration.html
@@ -12,7 +12,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/evisa-landing-page-style.css">
     <link rel="stylesheet" href="css/evisa-login-page.css">
-    <title>eVisa Login</title>
+    <title>eVisa Registration</title>
 </head>
 <body>
     <header>
@@ -49,7 +49,7 @@
         <div class="content">
                 <div class="form-content">
                         <div class="form-header">				
-                            <h4 class="form-title">Login</h4>
+                            <h4 class="form-title">Registration</h4>
                         </div>
                         <div class="form-body">
                             <form action="#" method="post">
@@ -60,18 +60,42 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
+                                        <div class="input-group">
+                                            <span class="input-group-addon"><i class="fa fa-user"></i></span>
+                                            <input type="email" class="form-control" name="confirm-email" placeholder="Confirm Email" required="required">
+                                        </div>
+                                    </div>
+                                <div class="form-group">
                                     <div class="input-group">
                                         <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-                                        <input type="text" class="form-control" name="password" placeholder="Password" required="required">
+                                        <input type="password" class="form-control" name="password" placeholder="Password" required="required">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="input-group">
+                                        <span class="input-group-addon"><i class="fa fa-lock"></i></span>
+                                        <input type="password" class="form-control" name="confirm-password" placeholder="Confirm Password" required="required">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="input-group">
+                                        <span class="input-group-addon"><i class="fa fa-lock"></i></span>
+                                        <input type="checkbox" class="checkbox" name="checkbox" value="" required="required"> <a href="#">Agree to Terms & Conditions</a>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="input-group">
+                                            <div class="g-recaptcha" data-sitekey="6LfKURIUAAAAAO50vlwWZkyK_G2ywqE52NU7YO0S" data-callback="verifyRecaptchaCallback" data-expired-callback="expiredRecaptchaCallback"></div>
+                                            <input class="form-control d-none" data-recaptcha="true" required data-error="Please complete the Captcha">
+                                            <div class="help-block with-errors"></div>
                                     </div>
                                 </div>
                                 <div class="row submit-section">
                                     <button class="col-md-6" type="submit" class="btn btn-primary btn-block btn-lg">Login</button>
-                                    <p class="col-md-6 hint-text"><a href="#">Forgot Password?</a></p>
                                 </div>
                             </form>
                         </div>
-                        <div class="form-footer">Don't have an account? <a href="registration.html">Register</a></div>
+                        <div class="form-footer">Already have an acount? <a href="login.html">Login</a></div>
                     </div>
                 </div>
         </div>
