404-page requested by Jerry with some few fixes in css

--- a/404-page-3.html
+++ b/404-page-3.html
@@ -13,7 +13,7 @@
       <link rel="stylesheet" href="css/404-page-2-style.css">
       <title>eVisa 404 Page</title>
   </head>
-  <body>
+  <body class="body">
      <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,7 +47,8 @@
         </div>
         <div class="error-message">
           <h4>Oops! There is nothing out here.</h4>
-          <p>The page you are looking for cannot be reached or<br> simply does not exist.</p>
+          <p class="bot-message">Want to speak a little Mòoré? “Yam Kibaré?” (How are you?) And your response:<br> “Laafi Bala, La Yamba?” (I am fine and you?)</p>
+          <p>The page you are looking for cannot be reached or simply does not exist.</p>
         </div>
         <div class="signup-btns">
             <button type="submit" class="login">Home</button>
