--- a/404-page.html
+++ b/404-page.html
@@ -60,8 +60,8 @@
           <p>The page you are looking for cannot be reached or simply does not exist.</p>
         </div>
         <div class="signup-btns">
-            <button type="submit" class="login">Login</button>
-            <button type="submit" class="register">Register</button>
+            <button type="submit" class="login">Home</button>
+            <button type="submit" class="register">Take Me Back</button>
         </div>
     </div>    
     <footer class="footer">
