--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/e-visa-style.css">
     <title>E-Visa Template</title>
 </head>
-<body>
+<body cl>
     <div class="container">
         <div class="row header">
             <div class="col-md-4 header-content" id="header-ministry">
@@ -171,7 +171,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <img class="barcode-image" src="images/eVisa-background.png" alt="eVisa barcode">
+                    <img class="barcode-image" src="images/eVisa-barcode-placeholder.jpeg" alt="eVisa barcode">
                 </div>
             </div> 
         </div>
