--- a/registration.html
+++ b/registration.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href='https://fonts.googleapis.com/css?family=Palanquin:500' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
@@ -49,7 +48,7 @@
         <div class="content">
                 <div class="form-content">
                         <div class="form-header">				
-                            <h4 class="form-title">Registration</h4>
+                            <h4 class="form-title registration">Registration</h4>
                         </div>
                         <div class="form-body">
                             <form action="#" method="post">
@@ -80,7 +79,7 @@
                                 <div class="form-group">
                                     <div class="input-group">
                                         <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-                                        <input type="checkbox" class="checkbox" name="checkbox" value="" required="required"> <a href="#">Agree to Terms & Conditions</a>
+                                        <input type="checkbox" class="checkbox" name="checkbox" value="" required="required"> <a class="terms" href="#">Agree to Terms & Conditions</a>
                                     </div>
                                 </div>
                                 <div class="form-group">
